<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginModel"
            type="com.testingandroid.model.LoginModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clMainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.testingandroid.login.LoginActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello Floks!"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="16dp"/>

        <EditText
            android:id="@+id/edUsername"
            android:layout_width="368dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="29dp"
            android:hint="username"
            android:text="@={loginModel.username}"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="368dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:hint="password"
            android:text="@={loginModel.password}"
            tools:layout_editor_absoluteX="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edUsername"/>

        <Button
            android:id="@+id/btnLoginButton"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="Login"
            android:onClick="onLoginClick"
            app:layout_constraintTop_toBottomOf="@+id/edPassword"
            tools:layout_editor_absoluteX="127dp"/>


        <Button
            android:id="@+id/btnGalleryButton"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            android:text="Gallery"
            style="@style/Button.selector_btn_yellow"
            android:onClick="onGalleryPickClick"
            app:layout_constraintTop_toBottomOf="@+id/edPassword"
            tools:layout_editor_absoluteX="127dp"/>

        <Button
            android:id="@+id/btnMapButton"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:layout_marginTop="56dp"
            android:text="Map"
            style="@style/Button.selector_btn_yellow"
            android:onClick="onMapClick"
            app:layout_constraintTop_toBottomOf="@+id/btnGalleryButton"
            tools:layout_editor_absoluteX="127dp"/>

    </android.support.constraint.ConstraintLayout>
</layout>